# keebtype

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: Info.plist.in
docs/: permissions.md
include/keebtype/audio/: audio_engine.hpp  mixer.hpp
include/keebtype/input/: input_monitor.hpp  key_codes.hpp
include/keebtype/platform/: paths.hpp
include/keebtype/soundpack/: soundpack.hpp  soundpack_store.hpp
include/keebtype/tray/: tray_app.hpp
src/: main.cpp
src/audio/: audio_engine.cpp  mixer.cpp
src/input/: input_monitor_linux.cpp  input_monitor_mac.mm  input_monitor_win.cpp
src/platform/: paths.cpp
src/soundpack/: soundpack.cpp  soundpack_store.cpp
src/tray/: tray_linux.cpp  tray_mac.mm  tray_win.cpp
tests/: test_main.cpp
